<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="20sp"
    android:gravity="center"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="@string/form"
                android:gravity="center"
                android:textSize="30sp"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginTop="40sp">
            </TextView>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/email_hint"
                android:textSize="18sp">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="@string/message"
                android:textSize="20sp"
                android:layout_marginTop="30sp">
            </TextView>

            <EditText

                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:textSize="18sp"
                android:hint="@string/message_hint"
                android:background="#edeee2"
                android:minLines="5"
                android:textColor="@color/black"
                ></EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginTop="40sp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_clear"
                    android:onClick="clear"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:layout_margin="10sp">
                </Button>
                <Button
                    android:id="@+id/btn_send"
                    android:onClick="send"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/send"
                    android:layout_margin="10sp">
                </Button>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>